Added genericts, specifications, support for static files and automapper

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -5,10 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Infrastructure\Infrastructure.csproj"/>
+        <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
     </ItemGroup>
     
     <ItemGroup>
+        <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -16,9 +17,32 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Data"/>
-        <Folder Include="Entities"/>
-        <Folder Include="Migrations"/>
+        <Folder Include="Data" />
+        <Folder Include="Entities" />
+        <Folder Include="Migrations" />
+        <Folder Include="wwwroot\images" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="wwwroot\products\.DS_Store" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\boot-ang1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\boot-ang2.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\boot-core1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\boot-core2.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\boot-redis1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\glove-code1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\glove-code2.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\glove-react1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\glove-react2.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\hat-core1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\hat-react1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\hat-react2.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sb-ang1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sb-ang2.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sb-core1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sb-core2.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sb-react1.png" />
+      <_ContentIncludedByDefault Remove="wwwroot\products\sb-ts1.png" />
     </ItemGroup>
 
 
