--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="bin\Interfaces\IProductRepository.cs" />
+    <Folder Include="bin" />
   </ItemGroup>
 
 </Project>
